--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <div class="trueCenter">
-    <img src="C:\Users\145740\Documents\site\assets\asset1.png" alt="jynetic.png = sajit.png">
+    <img src="https://raw.githubusercontent.com/jynetic/ynotworking/main/assets/asset1.png" alt="jynetic.png = sajit.png">
   <div>
   <div class="trueCenter">
         <h1>
