--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <div class="trueCenter">
-    <img src="https://raw.githubusercontent.com/jynetic/ynotworking/main/assets/asset1.png" alt="jynetic.png = sajit.png">
+    <img src="C:\Users\145740\Documents\site\assets\asset1.png" alt="jynetic.png = sajit.png">
   <div>
   <div class="trueCenter">
         <h1>
@@ -36,4 +36,3 @@
    </div>
    </body>
    <iframe src="https://discord.com/widget?id=913213790756167722&theme=dark" width="250" height="300" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-  
